--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
     "name": "generate-nginx-config-for-thingies",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "This is the shit!",
     "scripts": {
         "build-coffee": "coffee -o output/ -c sources/source/*/*.coffee",
         "watch-coffee": "coffee -o output/ -cw sources/source/*/*.coffee",
+        "ncu-update": "ncu -u",
+        "update-packages": "run-s -ns ncu-update install",
         "postinstall": "npm run initialize-thingy",
         "initialize-thingy": "run-s -ns build",
         "build": "run-s -ns clean-package build-coffee copyscript install-node-modules prepend-shebang",
         "watch": "run-p -nsr watch-coffee",
         "release": "run-s -ns build publish-script",
+        "update-cli-packages": "toolset/thingy-build-system/cli/update-packages.sh",
         "prepend-shebang": "toolset/thingy-build-system/cli/prepend-shebang-to-output-index.sh",
         "publish-script": "toolset/thingy-build-system/cli/publish-on-npm.sh",
         "clean-package": "toolset/thingy-build-system/cli/clean-package.sh",
@@ -29,7 +32,8 @@
     },
     "homepage": "https://github.com/JhonnyJason/generate-nginx-config-for-thingies#readme",
     "dependencies": {
-        "coffeescript": "^2.3.2",
+        "coffeescript": "^2.4.1",
+        "npm-check-updates": "^3.1.23",
         "npm-run-all": "^4.1.5"
     }
 }
