--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "generate-nginx-config-for-thingies",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "This is the shit!",
     "scripts": {
         "build-coffee": "coffee -o output/ -c sources/source/*/*.coffee",
@@ -9,7 +9,7 @@
         "reinstall": "npm install",
         "update-packages": "run-s -ns ncu-update reinstall",
         "module-gen": "thingy-module-gen --",
-        "sync-allmodules": "thingy-allmodules-sync",
+        "sync-allmodules": "thingy-allmodules-sync --style require",
         "add-module": "run-s -ns \"module-gen {*}\" sync-allmodules --",
         "sourcemodulecreate": "cd sources/source && thingymodulecreate",
         "use-sub-sourcemodule": "run-s \"sourcemodulecreate submodule,{1},use,{2}\"  --",
@@ -43,10 +43,10 @@
     "homepage": "https://github.com/JhonnyJason/generate-nginx-config-for-thingies#readme",
     "dependencies": {
         "coffeescript": "^2.5.1",
-        "npm-check-updates": "^4.0.2",
+        "npm-check-updates": "^4.0.3",
         "npm-run-all": "^4.1.5",
         "thingy-allmodules-sync": "^0.1.2",
-        "thingy-module-gen": "^0.1.2",
+        "thingy-module-gen": "^0.1.3",
         "thingymodulecreate": "^0.1.6",
         "thingysync": "^0.1.1"
     },
