--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "generate-nginx-config-for-thingies",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "This is the shit!",
     "scripts": {
         "build-coffee": "coffee -o output/ -c sources/source/*/*.coffee",
@@ -24,6 +24,10 @@
         "build": "run-s -ns clean-package build-coffee copyscript install-node-modules prepend-shebang",
         "watch": "run-p -nsr watch-coffee",
         "release": "run-s -ns build publish-script",
+        "package-update-release": "run-s -ns update-tools update-packages inc-versions update-cli-packages push release",
+        "inc-versions": "toolset/thingy-build-system/cli/inc-versions.js",
+        "sync-versions": "toolset/thingy-build-system/cli/sync-versions.js",
+        "update-tools": "toolset/thingy-build-system/cli/update-tools.sh",
         "update-cli-packages": "toolset/thingy-build-system/cli/update-packages.sh",
         "prepend-shebang": "toolset/thingy-build-system/cli/prepend-shebang-to-output-index.sh",
         "publish-script": "toolset/thingy-build-system/cli/publish-on-npm.sh",
